<resources>
	<string name="app_name" translatable="false">Open Plan</string>
	<string name="test_notification_button">Test Notification</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="add_task_button_desc">Add task button</string>
	<string name="task_title_hint">Enter your task</string>
	<string name="add_task">Add task</string>
	<string name="cancel">Cancel</string>
	<string name="canceled">Canceled</string>
	<string name="current_tasks">Current tasks</string>
	<string name="color">Color</string>
	<string name="choose_color">Choose color</string>
	<string name="category_checkbox">Category</string>
	<string name="repeatable_checkbox">Repeatable</string>
	<string name="category_help">What is category?</string>
	<string name="categories">Categories</string>
	<string name="subtasks">Subtasks</string>
	<string name="requires">Requires</string>
	<string name="button_add">Add</string>
	<string name="mark_completed">Mark completed</string>
	<string name="added">Added</string>
	<string name="save_task">Save task</string>
	<string name="edit_task">Edit task</string>
	<string name="add_subtask">Add subtask</string>
	<string name="title_activity_navigation" translatable="false">NavigationActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title" translatable="false">Android Studio</string>
	<string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
	<string name="nav_header_desc" translatable="false">Navigation header</string>
	<string name="action_settings" translatable="false">Settings</string>

	<string name="menu_unfinished_tasks">Unfinished tasks</string>
	<string name="menu_today_tasks">Today</string>
	<string name="menu_slideshow">Slideshow</string>
	<string name="start_time_label">Time of start</string>
	<string name="set_label">Pick</string>
	<string name="pick_start_time_label">Pick start time</string>
</resources>