<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/nav_unfinished_tasks">

	<fragment
		android:id="@+id/nav_unfinished_tasks"
		android:name="com.slesarenkoas.personalplanningapp.ui.unfinishedtasks.UnfinishedTasksFragment"
		android:label="@string/menu_unfinished_tasks"
		tools:layout="@layout/fragment_unfinished_tasks" />

	<fragment
		android:id="@+id/nav_today_tasks"
		android:name="com.slesarenkoas.personalplanningapp.ui.gallery.GalleryFragment"
		android:label="@string/menu_today_tasks"
		tools:layout="@layout/fragment_gallery" />

	<fragment
		android:id="@+id/nav_slideshow"
		android:name="com.slesarenkoas.personalplanningapp.ui.slideshow.SlideshowFragment"
		android:label="@string/menu_slideshow"
		tools:layout="@layout/fragment_slideshow" />
</navigation>